[package]
name = "hypixel_tracker"
version = "0.1.0"
authors = ["heavenly <vatican@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version="2.0.1", features=["json"] }
rand = "0.8.3"
rayon = "1.5.0"
serde_json = "1.0.61"